login and refresh

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1{
+margin: 0;
+}
+
+a{
+  text-decoration: none;
+}
